# CmakeMreVSMTest

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: lib_exports.h
common/mreapi/: CMakeLists.txt
run/: CMakeLists.txt
run/run_in_MoDis/: CMakeLists.txt
vsm/: CMakeLists.txt
vsm/core/: CMakeLists.txt  main.cpp
vsm/main/: CMakeLists.txt  gccmain.c  main.cpp  vsm_fastmacros.h
vsm/resourses/: CMakeLists.txt
vxp/: CMakeLists.txt
vxp/core/: CMakeLists.txt  main.cpp
vxp/main/: CMakeLists.txt  main.cpp
vxp/resourses/: CMakeLists.txt
vxp/vxp/: CMakeLists.txt
